tests/expected_invalid_external_phase_construct.diag.out
<input>:17:5: error: cannot construct phase position 'model::AppConfig::Draft' outside its declaring module
        model::AppConfig::Draft { id: 1, payload: 2 }
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
